@@ -1,3 +1,4 @@
+import AccessControl
 from zExceptions import Redirect
 from zope.component import getMultiAdapter
 
@@ -6,6 +7,14 @@ def protect_edit_form(obj, event):
     """If the object is locked for the current user, let's redirect to
     the view of the object, where the lockinfo viewlet usually is.
     """
+
+    # Since locking does not working for anonymous users, we disable the
+    # redirect for them. This also makes widget traversal work, since the
+    # widget traversal is always anonymous.
+    nobody = AccessControl.SecurityManagement.SpecialUsers.nobody
+    if AccessControl.getSecurityManager().getUser() == nobody:
+        return
+
     info = getMultiAdapter((obj, obj.REQUEST),
                                 name="plone_lock_info")
 
